--- a/public/styles.css
+++ b/public/styles.css
@@ -41,11 +41,10 @@ body{
 .main{
     
     height: 900px; /*change by auto*/
-    max-width: 900px;
     background-color: #1E2738;
 }
 .name{
-    width: 900px;
+    width: 950px;
     text-align: center;
     
     position: relative;
@@ -93,3 +92,19 @@ body{
 }
 
 /*End Container Main*/
+
+/*Content-main*/
+.content-main{
+   width: 100%;
+   border: 1px solid #A5B3CE;
+   height: 700px;/*change to auto*/
+   display: grid;
+   grid-template-columns: 65% 35%;
+}
+.content-left{
+    border: 1px solid #A5B3CE;
+}
+.content-right{
+    border: 1px solid #A5B3CE;
+}
+/*End Content-main*/
