--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,14 @@
                     </ul>
                 </div>
             </div>
+            <div class="content-main">
+                <div class="content-left">
+
+                </div>
+                <div class="content-right">
+                    
+                </div>
+            </div>
         </div>
     </div>
 </body>
