--- a/public/styles.css
+++ b/public/styles.css
@@ -8,6 +8,12 @@ body{
     background-color: #19202E;
     font-family:"PT Serif", serif; 
 }
+h2{
+    color: white;
+}
+p{
+    color: #A5B3CE;
+}
 
 
 /*header block*/
@@ -42,11 +48,14 @@ body{
     
     height: 900px; /*change by auto*/
     background-color: #1E2738;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .name{
     width: 950px;
     text-align: center;
-    
     position: relative;
     display: flex;
     flex-direction: column;
@@ -108,3 +117,9 @@ body{
     border: 1px solid #A5B3CE;
 }
 /*End Content-main*/
+/*works*/
+.content-left .about{
+    border: 1px solid white;
+    margin: 40px;
+}
+/*end works*/
