--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,28 @@
             </div>
             <div class="content-main">
                 <div class="content-left">
+                    <div class="about">
+                        <h2>ABOUT ME</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ducimus soluta molestias cumque ad? Voluptatem tempora neque architecto dolorum quo?</p>
+                    </div>
+                    <div class="works">
+                        <div class="title">
+                            <h2>MY WORKS</h2>
+                        </div>
+                        <div class="works-items">
+                            <h2>Item1</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id consectetur consequatur totam.</p>
+                            <h2>Item2</h2>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque in necessitatibus expedita!</p>
+                        </div>
 
+                    </div>
+                    <div class="projects">
+                        <h2>Item1</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id consectetur consequatur totam.</p>
+                            <h2>Item2</h2>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque in necessitatibus expedita!</p>
+                    </div>
                 </div>
                 <div class="content-right">
                     
